# vital-agentbox

./: .dockerignore  .gitignore  Dockerfile.orchestrator  Dockerfile.worker  MANIFEST.in  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
agentbox/api/: app.py  auth.py  deps.py  models.py
agentbox/box/: __init__.py  agentcore_box.py  box.py  code_exec_box.py  git_box.py
agentbox/browser/: __init__.py  bridge.py  models.py  pool.py  routes.py  session.py  ws_handler.py
agentbox/browser_client/: __init__.py
agentbox/client/: __init__.py  client.py
agentbox/deepagents/: __init__.py  sandbox.py
agentbox/engine/: __init__.py  agentcore_engine.py  base.py  pyodide_engine.py
agentbox/langchain/: __init__.py  backend.py  sandbox.py  tools.py
agentbox/manager/: __init__.py  box_manager.py
agentbox/orchestrator/: __init__.py  app.py  credential_checker.py  proxy.py  state.py
deploy/: README.md  orchestrator-task-definition.json  worker-task-definition.json
docs/: changelog.md  index.md
docs/api/: client-sdk.md  orchestrator-api.md  worker-api.md
docs/getting-started/: aws-deployment.md  deployment.md  install.md  quickstart.md
docs/integrations/: deepagents.md  langchain.md
docs/operations/: data-access.md  docker.md  scaling.md  storage.md
docs/prompts/: sandbox_tools.md  system_prompt.md
examples/: deep_agents_editorial.py  deep_agents_git.py
planning/: agent-file-editing.md  documentation.md  langchain-sandbox-integration.md  operational-plan.md  release.md  security-model.md
scripts/: download_pyodide.sh  generate_api_docs.py  worker-entrypoint.sh
test/: test_agentcore_engine.py  test_agentcore_git.py  test_agentcore_intercept.py  test_agentcore_live.py  test_api.py  test_ast_match.py  test_box_lifecycle.py  test_box_manager.py  test_boxcp.py  test_browser_orchestrator.py  test_browser_pool.py  test_browser_service_e2e.py  test_client.py  test_data_access_modes.py  test_deepagent_agentcore_e2e.py  test_deepagent_e2e.py  test_e2e_docker.py  test_git_sync.py  test_gitbox.py  test_gitbox_e2e.py  test_keycloak_jwt.py  test_langchain.py  test_memfs.py  test_nyscef_e2e.py  test_nyscef_tools.py  test_orchestrator.py  test_outline.py  test_patch.py  test_report_e2e.py  test_reportgen.py  test_s3_storage.py  test_sandbox_protocol.py  test_shell_executor.py  test_spike_binary_and_git.py  test_tools_e2e.py  test_v4a.py  test_web_tools.py
(+89 files in other folders)
